Bug 374156 - Favorites in Classical Menu (Kicker) are empty after each login in last Plasma unstable versions
Summary: Favorites in Classical Menu (Kicker) are empty after each login in last Plasm...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Menu (Kicker) widget (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords: usability
: 374278 405417 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-12-25 23:01 UTC by Menak Vishap
Modified: 2019-03-18 13:23 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Menak Vishap 2016-12-25 23:01:06 UTC
After some last Plasma updates near a week ago the Favorites in Classical Applications Menu (Kicker) became empty. It happened in the same day in openSUSE Leap 42.1 with unstable Plasma repo and in Neon developers unstable branch,and soon after that also in KaOS with kde-next repo. It is still possible to add some application to Favorites, but after re-login or Plasma restarting the Favorites again are empty.
Comment 1 Christoph Feck 2016-12-31 21:47:10 UTC
*** Bug 374278 has been marked as a duplicate of this bug. ***
Comment 2 Kai Uwe Broulik 2017-01-01 17:18:44 UTC
Patch https://phabricator.kde.org/D3910
Comment 3 Eike Hein 2017-01-05 10:07:08 UTC
Git commit b7976f0c2628db05ee11841aa455afb426f946d7 by Eike Hein.
Committed on 05/01/2017 at 10:04.
Pushed by hein into branch 'master'.

Fix race condition causing empty favorites.

Summary:
This puts the frontend in charge of calling refresh() after the
favorites have been initially set by setting auto population at
completion to false. Also preserves original behavior by keeping
auto population default-on.

Fixes a regression from 3e88ac6.

This is an alternative to D3910.

Reviewers: #plasma, broulik

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3979

M  +3    -0    applets/kicker/package/contents/ui/main.qml
M  +17   -1    applets/kicker/plugin/rootmodel.cpp
M  +8    -0    applets/kicker/plugin/rootmodel.h

https://commits.kde.org/plasma-desktop/b7976f0c2628db05ee11841aa455afb426f946d7
Comment 4 David Edmundson 2019-03-18 13:23:20 UTC
*** Bug 405417 has been marked as a duplicate of this bug. ***