Fix race condition causing empty favorites.

Summary:
This puts the frontend in charge of calling refresh() after the
favorites have been initially set by setting auto population at
completion to false. Also preserves original behavior by keeping
auto population default-on.

Fixes a regression from 3e88ac6.
BUG:374156

This is an alternative to D3910.

Reviewers: #plasma, broulik

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3979